<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/costa_library"
    tools:context=".WriteReviewActivity">

    <View
        android:id="@+id/view4"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/writeReviewTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_write"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4" />

    <EditText
        android:id="@+id/starsEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/stars_number"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/staffSpinner"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/commentEditText"
        app:layout_constraintTop_toBottomOf="@+id/writeReviewTextView"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/staffSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/commentEditText"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4" />

    <EditText
        android:id="@+id/commentEditText"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/comment"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitComment"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4" />

</androidx.constraintlayout.widget.ConstraintLayout>